remove startup chile posts

--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -12,8 +12,14 @@
     <script src="lib/gameView.js"></script>
   </head>
   <body>
+   
     <canvas id="game-canvas"
-      style="background-color: black"></canvas>
+      style="background-color: black; width:60%; float:right"></canvas>
+    <h2>Asteroids Game</h2>
+    <p>Canvas and JavaScript demo by Jessie Anderson</p>
+    <a href="http://github.com/housewifehacker/asteroids">Source Code</a>
+    <p>To play: Use arrow keys to move your magenta spaceship and press "a" to shoot. Friction with colliding space debris slows down all the moving objects. There's no score, so have fun!</p>
+
       
     <script>
       var canvasEl = document.getElementById("game-canvas");
