change location of html output

--- a/archives.html
+++ b/archives.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>housewife_hacker</title>
-        <link rel="stylesheet" href="http://housewifehacker.com/theme/css/main.css" />
-        <link href="http://housewifehacker.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="housewife_hacker Atom Feed" />
+        <title>A Pelican Blog</title>
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Pelican Blog Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,53 +13,47 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://housewifehacker.com/">housewife_hacker </a></h1>
+                <h1><a href="/">A Pelican Blog </a></h1>
                 <nav><ul>
-                    <li><a href="http://housewifehacker.com/category/code.html">Code</a></li>
-                    <li><a href="http://housewifehacker.com/category/reading-list.html">Reading List</a></li>
+                    <li><a href="/category/code.html">Code</a></li>
+                    <li><a href="/category/projects.html">Projects</a></li>
+                    <li><a href="/category/reading-list.html">Reading List</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for housewife_hacker</h1>
+<h1>Archives for A Pelican Blog</h1>
 
 <dl>
-    <dt>June 2012</dt>
-    <dd><a href="http://housewifehacker.com/the-practice-of-programming.html">The Practice of Programming</a></dd>
-    <dt>June 2012</dt>
-    <dd><a href="http://housewifehacker.com/intermediate-guess-number-python-game.html">Intermediate Guess Number Python Game</a></dd>
-    <dt>May 2012</dt>
-    <dd><a href="http://housewifehacker.com/easy-anagram-dictionaries-practice.html">Easy Anagram Dictionaries Practice</a></dd>
-    <dt>May 2012</dt>
-    <dd><a href="http://housewifehacker.com/mutable-versus-immutable-object-types.html">Mutable versus Immutable Object Types</a></dd>
-    <dt>March 2012</dt>
-    <dd><a href="http://housewifehacker.com/structure-and-interpretation-of-computer-programs.html">Structure and Interpretation of Computer Programs</a></dd>
-    <dt>October 2010</dt>
-    <dd><a href="http://housewifehacker.com/2010-guess-the-number-game.html">2010 Guess The Number Game</a></dd>
-    <dt>October 2010</dt>
-    <dd><a href="http://housewifehacker.com/decimal-to-change-number-precision.html">Decimal to Change Number Precision</a></dd>
-    <dt>October 2010</dt>
-    <dd><a href="http://housewifehacker.com/map-function-in-python.html">Map Function in Python</a></dd>
-    <dt>October 2010</dt>
-    <dd><a href="http://housewifehacker.com/indexes-strings-and-lists.html">Indexes, Strings, and Lists</a></dd>
-    <dt>October 2010</dt>
-    <dd><a href="http://housewifehacker.com/math-with-python.html">Math With Python</a></dd>
+    <dt>Sun 12 October 2014</dt>
+    <dd><a href="/polltheworld.html">PollTheWorld</a></dd>
+    <dt>Sun 10 June 2012</dt>
+    <dd><a href="/the-practice-of-programming.html">The Practice of Programming</a></dd>
+    <dt>Sat 02 June 2012</dt>
+    <dd><a href="/intermediate-guess-number-python-game.html">Intermediate Guess Number Python Game</a></dd>
+    <dt>Tue 15 May 2012</dt>
+    <dd><a href="/easy-anagram-dictionaries-practice.html">Easy Anagram Dictionaries Practice</a></dd>
+    <dt>Mon 07 May 2012</dt>
+    <dd><a href="/mutable-versus-immutable-object-types.html">Mutable versus Immutable Object Types</a></dd>
+    <dt>Sat 10 March 2012</dt>
+    <dd><a href="/structure-and-interpretation-of-computer-programs.html">Structure and Interpretation of Computer Programs</a></dd>
+    <dt>Mon 25 October 2010</dt>
+    <dd><a href="/2010-guess-the-number-game.html">2010 Guess The Number Game</a></dd>
+    <dt>Fri 22 October 2010</dt>
+    <dd><a href="/decimal-to-change-number-precision.html">Decimal to Change Number Precision</a></dd>
+    <dt>Wed 20 October 2010</dt>
+    <dd><a href="/map-function-in-python.html">Map Function in Python</a></dd>
+    <dt>Mon 18 October 2010</dt>
+    <dd><a href="/indexes-strings-and-lists.html">Indexes, Strings, and Lists</a></dd>
+    <dt>Mon 18 October 2010</dt>
+    <dd><a href="/math-with-python.html">Math With Python</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>blogroll</h2>
-                        <ul>
-                            <li><a href="http://docs.notmyidea.org/alexis/pelican/">Pelican</a></li>
-                            <li><a href="http://python.org">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org">Jinja2</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://housewifehacker.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="http://twitter.com/housewifehacker">Follow Me On Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
