--- a/authors.html
+++ b/authors.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>housewife_hacker - Authors</title>
-        <link rel="stylesheet" href="http://housewifehacker.com/theme/css/main.css" />
-        <link href="http://housewifehacker.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="housewife_hacker Atom Feed" />
+        <title>A Pelican Blog - Authors</title>
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Pelican Blog Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,35 +13,26 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://housewifehacker.com/">housewife_hacker </a></h1>
+                <h1><a href="/">A Pelican Blog </a></h1>
                 <nav><ul>
-                    <li><a href="http://housewifehacker.com/category/code.html">Code</a></li>
-                    <li><a href="http://housewifehacker.com/category/reading-list.html">Reading List</a></li>
+                    <li><a href="/category/code.html">Code</a></li>
+                    <li><a href="/category/projects.html">Projects</a></li>
+                    <li><a href="/category/reading-list.html">Reading List</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on housewife_hacker</h1>
+    <h1>Authors on A Pelican Blog</h1>
     <ul>
-        <li><a href="http://housewifehacker.com/author/jessie-anderson.html">Jessie Anderson</a> (10)</li>
     </ul>
 </section>
 
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>blogroll</h2>
-                        <ul>
-                            <li><a href="http://docs.notmyidea.org/alexis/pelican/">Pelican</a></li>
-                            <li><a href="http://python.org">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org">Jinja2</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://housewifehacker.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="http://twitter.com/housewifehacker">Follow Me On Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
