--- a/tags.html
+++ b/tags.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>A Pelican Blog - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Pelican Blog Atom Feed" />
+        <title>housewife_hacker - Tags</title>
+        <link rel="stylesheet" href="http://housewifehacker.com/theme/css/main.css" />
+        <link href="http://housewifehacker.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="housewife_hacker Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,40 +13,49 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">A Pelican Blog </a></h1>
+                <h1><a href="http://housewifehacker.com/">housewife_hacker </a></h1>
                 <nav><ul>
-                    <li><a href="/category/code.html">Code</a></li>
-                    <li><a href="/category/projects.html">Projects</a></li>
-                    <li><a href="/category/reading-list.html">Reading List</a></li>
+                    <li><a href="http://housewifehacker.com/category/code.html">Code</a></li>
+                    <li><a href="http://housewifehacker.com/category/projects.html">Projects</a></li>
+                    <li><a href="http://housewifehacker.com/category/reading-list.html">Reading List</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for A Pelican Blog</h1>
+    <h1>Tags for housewife_hacker</h1>
     <ul>
-        <li><a href="/tag/beginner.html">beginner</a> (4)</li>
-        <li><a href="/tag/data-structures.html">data structures</a> (3)</li>
-        <li><a href="/tag/debugging.html">debugging</a> (1)</li>
-        <li><a href="/tag/dictionary.html">dictionary</a> (1)</li>
-        <li><a href="/tag/exception-handling.html">exception handling</a> (1)</li>
-        <li><a href="/tag/games.html">games</a> (2)</li>
-        <li><a href="/tag/intermediate.html">intermediate</a> (1)</li>
-        <li><a href="/tag/lists.html">lists</a> (2)</li>
-        <li><a href="/tag/math.html">math</a> (2)</li>
-        <li><a href="/tag/modules.html">modules</a> (3)</li>
-        <li><a href="/tag/mutable-and-immutable.html">mutable and immutable</a> (2)</li>
-        <li><a href="/tag/python.html">python</a> (8)</li>
-        <li><a href="/tag/string-formatting.html">string formatting</a> (2)</li>
-        <li><a href="/tag/strings.html">strings</a> (1)</li>
+        <li><a href="http://housewifehacker.com/tag/beginner.html">beginner</a> (4)</li>
+        <li><a href="http://housewifehacker.com/tag/data-structures.html">data structures</a> (3)</li>
+        <li><a href="http://housewifehacker.com/tag/debugging.html">debugging</a> (1)</li>
+        <li><a href="http://housewifehacker.com/tag/dictionary.html">dictionary</a> (1)</li>
+        <li><a href="http://housewifehacker.com/tag/exception-handling.html">exception handling</a> (1)</li>
+        <li><a href="http://housewifehacker.com/tag/games.html">games</a> (2)</li>
+        <li><a href="http://housewifehacker.com/tag/intermediate.html">intermediate</a> (1)</li>
+        <li><a href="http://housewifehacker.com/tag/lists.html">lists</a> (2)</li>
+        <li><a href="http://housewifehacker.com/tag/math.html">math</a> (2)</li>
+        <li><a href="http://housewifehacker.com/tag/modules.html">modules</a> (3)</li>
+        <li><a href="http://housewifehacker.com/tag/mutable-and-immutable.html">mutable and immutable</a> (2)</li>
+        <li><a href="http://housewifehacker.com/tag/python.html">python</a> (8)</li>
+        <li><a href="http://housewifehacker.com/tag/string-formatting.html">string formatting</a> (2)</li>
+        <li><a href="http://housewifehacker.com/tag/strings.html">strings</a> (1)</li>
     </ul>
 </section>
 
         <section id="extras" class="body">
+                <div class="blogroll">
+                        <h2>blogroll</h2>
+                        <ul>
+                            <li><a href="http://docs.notmyidea.org/alexis/pelican/">Pelican</a></li>
+                            <li><a href="http://python.org">Python.org</a></li>
+                            <li><a href="http://jinja.pocoo.org">Jinja2</a></li>
+                        </ul>
+                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://housewifehacker.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="http://twitter.com/housewifehacker">Follow Me On Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
