Bullet PollTheWorld post, add Bcrypt post

--- a/archives.html
+++ b/archives.html
@@ -27,6 +27,8 @@
     <dt>October 2014</dt>
     <dd><a href="http://housewifehacker.com/asteroids.html">Asteroids</a></dd>
     <dt>October 2014</dt>
+    <dd><a href="http://housewifehacker.com/bcrypt-with-rails.html">Bcrypt with Rails</a></dd>
+    <dt>October 2014</dt>
     <dd><a href="http://housewifehacker.com/polltheworld.html">PollTheWorld</a></dd>
     <dt>June 2012</dt>
     <dd><a href="http://housewifehacker.com/the-practice-of-programming.html">The Practice of Programming</a></dd>
