--- a/archives.html
+++ b/archives.html
@@ -25,6 +25,10 @@
 
 <dl>
     <dt>October 2014</dt>
+    <dd><a href="http://housewifehacker.com/flightbookr.html">FlightBookr</a></dd>
+    <dt>October 2014</dt>
+    <dd><a href="http://housewifehacker.com/pythons-dictionary-get.html">Python's Dictionary Get</a></dd>
+    <dt>October 2014</dt>
     <dd><a href="http://housewifehacker.com/asteroids.html">Asteroids</a></dd>
     <dt>October 2014</dt>
     <dd><a href="http://housewifehacker.com/bcrypt-with-rails.html">Bcrypt with Rails</a></dd>
