All the other components I hope

--- a/archives.html
+++ b/archives.html
@@ -27,6 +27,8 @@
 <h1>Archives for housewife_hacker</h1>
 
 <dl>
+    <dt>August 2015</dt>
+    <dd><a href="http://housewifehacker.com/sprite-viewer.html">Sprite Viewer</a></dd>
     <dt>October 2014</dt>
     <dd><a href="http://housewifehacker.com/flightbookr.html">FlightBookr</a></dd>
     <dt>October 2014</dt>
