Write about auth. Authentication cases to think about and storing auth data in browser

--- a/archives.html
+++ b/archives.html
@@ -23,6 +23,10 @@
 <h1>Archives for housewife_hacker</h1>
 
 <dl>
+    <dt>September 2019</dt>
+    <dd><a href="http://housewifehacker.com/authentication-browser-storage-options.html">Authentication Browser Storage Options</a></dd>
+    <dt>September 2019</dt>
+    <dd><a href="http://housewifehacker.com/authentication-cases-you-could-handle.html">Authentication Cases You Could Handle</a></dd>
     <dt>August 2019</dt>
     <dd><a href="http://housewifehacker.com/github-search-users.html">Github Search Users</a></dd>
     <dt>June 2019</dt>
