Post for mutability, void functions, and side effects in python

--- a/archives.html
+++ b/archives.html
@@ -23,6 +23,8 @@
 <h1>Archives for housewife_hacker</h1>
 
 <dl>
+    <dt>April 2021</dt>
+    <dd><a href="http://housewifehacker.com/python-mutability-and-side-effects.html">Python Mutability and Side Effects</a></dd>
     <dt>September 2019</dt>
     <dd><a href="http://housewifehacker.com/authentication-browser-storage-options.html">Authentication Browser Storage Options</a></dd>
     <dt>September 2019</dt>
